apps/tilt/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tilt
spec:
  selector:
    app.kubernetes.io/name: humacs
  type: NodePort
  ports:
  - name: tilt
    port: 10350
    targetPort: 10350
