apps/tilt/deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tilt-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "tilt.local.ii.coop, tilt.local.ii.nz, tilt.local.sharing.io"
spec:
  rules:
  - host: tilt.localho.st
    http:
      paths:
      - path: /
        backend:
          serviceName: kubemacs-tilt
          servicePort: 10350
